# judex

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.python311  Dockerfile.python39  README-precommit.md  README.md  comparison_report.html  comparison_report.md  db.py  docker-compose.yml  example_database_optimization.py  extract.py  jsoncompare.py  judex-cli  main.py  manual_test.py  out.csv  out.json  pyproject.toml  scrapy.cfg  test.db  test_html_fields.py  test_scrape_compare.py
.git_corrupt_1760957502/: COMMIT_EDITMSG  HEAD  ORIG_HEAD  config  index  packed-refs
.git_corrupt_1760957502/logs/: HEAD
.git_corrupt_1760957502/logs/refs/heads/: ground-truth  main  performance
.git_corrupt_1760957502/logs/refs/remotes/origin/: HEAD  ground-truth  main  typer  user-ux
.git_corrupt_1760957502/objects/pack/: pack-497978aa84d14ff4beb46195291ce1f87577d023.idx  pack-76b9fcceb740683683db744e57af86956925facb.idx  pack-76b9fcceb740683683db744e57af86956925facb.pack
.git_corrupt_1760957502/refs/heads/: main  performance
.git_corrupt_1760957502/refs/remotes/origin/: typer  user-ux
.github/workflows/: docker-test.yml
dados/: dados_ADI_4436_to_4438.csv
docs/: API.md  ARCHITECTURE.md  CHANGELOG.md  DEPLOYMENT.md  DOCKER.md  LEGAL.md  README.md  TESTING.md  development.md
judex/: __init__.py  core.py  data.csv  data.json  database.py  extract.py  items.py  models.py  output_registry.py  pipelines.py  pydantic_pipeline.py  settings.py  types.py
judex/pipelines/: __init__.py  csv_pipeline.py  database_pipeline.py  json_pipeline.py  jsonl_pipeline.py  manager.py  metadata_pipeline.py  normalize_pipeline.py  order_pipeline.py
judex/spiders/: stf.py
judex/utils/: text.py
lexicon/: __init__.py  core.py  database.py  extract.py  items.py  loaders.py  middlewares.py  pipelines.py  pydantic_pipeline.py  settings.py  types.py
lexicon/spiders/: stf.py
output/: ADI_cases.json  ADI_processos.csv
scripts/: docker-test.sh  pre-commit-hook.sh
tests/: test_cli.py  test_cli_matches_ground_truth.py  test_database_additional.py  test_database_direct.py  test_database_standalone.py  test_dynamic_field_extraction.py  test_e2e_cli.py  test_minify_cli.py  test_models.py  test_output_persistence.py  test_overwrite_cli.py  test_persistence.py  test_pydantic_pipeline.py  test_spider_integration.py  test_types.py
tests/ground_truth/: AI_772309.json  MI_12.json  RCL_29806.json  RE_1234567.json  readme.md
