[project]
name = "lexicon"
version = "0.1.0"
description = "Ferramenta para extração de dados jurídicos."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "curl-cffi>=0.13.0",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "pydantic>=2.12.2",
    "scrapy>=2.13.3",
    "seaborn>=0.13.2",
]

[project.optional-dependencies]
dev = [
    "black>=25.9.0",
    "mypy>=1.18.2", 
    "ruff>=0.14.0"
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes errors (like undefined names)
    "W",   # pycodestyle warnings
    "I",   # isort import sorting
    "UP",  # pyupgrade (modernize Python code)
    "B",   # flake8-bugbear (additional bug checks)
    "C90", # mccabe complexity checker
    "PL"   # pylint checks
]
ignore = ["E501"]  # Black handles long lines
mccabe.max-complexity = 10

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
ignore_missing_imports = true
strict_optional = true
