[project]
name = "lexicon"
version = "0.1.0"
description = "Ferramenta para extração de dados jurídicos."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "curl-cffi>=0.13.0",
    "ipykernel>=7.0.1",
    "pandas>=2.3.3",
    "pdfplumber>=0.11.7",
    "scrapy>=2.13.3",
    "scrapy-selenium>=0.0.7",
    "selenium>=4.15.0",
    "striprtf>=0.0.29",
]

[project.optional-dependencies]
dev = [
    "black>=25.9.0",
    "mypy>=1.18.2", 
    "ruff>=0.14.0"
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes errors (like undefined names)
    "W",   # pycodestyle warnings
    "I",   # isort import sorting
    "UP",  # pyupgrade (modernize Python code)
    "B",   # flake8-bugbear (additional bug checks)
    "C90", # mccabe complexity checker
    "PL"   # pylint checks
]
ignore = ["E501"]  # Black handles long lines
mccabe.max-complexity = 10

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
ignore_missing_imports = true
strict_optional = true

[dependency-groups]
dev = [
    "black>=25.9.0",
    "mypy>=1.18.2",
    "ruff>=0.14.0",
]
