[project]
name = "judex"
version = "0.1.0"
description = "Judex Legal Case Scraper - Scrape legal cases from STF"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "scrapy",
    "scrapy-selenium",
    "pydantic",
    "lxml",
    "selenium",
    "requests",
    "beautifulsoup4",
    "pandas",
    "sqlalchemy",
    "uv-build>=0.9.3",
]

[project.scripts]
judex = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["judex"]
